refactor: 정산 내역 조회를 DTO 직접 변환 방식으로 개선