@@ -1,9 +1,11 @@
 package org.zzin.splitfy.domain.settlement.service;
 
+import java.util.AbstractMap;
 import java.util.HashMap;
 import java.util.HashSet;
 import java.util.List;
 import java.util.Map;
+import java.util.Objects;
 import java.util.Set;
 import java.util.stream.Collectors;
 import lombok.RequiredArgsConstructor;
@@ -20,11 +22,10 @@ import org.zzin.splitfy.domain.settlement.dto.PaymentAllocationDto;
 import org.zzin.splitfy.domain.settlement.dto.request.PaymentRequest;
 import org.zzin.splitfy.domain.settlement.dto.request.SettlementRequest;
 import org.zzin.splitfy.domain.settlement.dto.response.SettlementHistoryResponse;
+import org.zzin.splitfy.domain.settlement.dto.response.SettlementPaymentResponse;
 import org.zzin.splitfy.domain.settlement.dto.response.SettlementResponse;
-import org.zzin.splitfy.domain.settlement.entity.Payment;
 import org.zzin.splitfy.domain.settlement.entity.Settlement;
 import org.zzin.splitfy.domain.settlement.exception.SettlementErrorCode;
-import org.zzin.splitfy.domain.settlement.mapper.SettlementHistoryMapper;
 import org.zzin.splitfy.domain.settlement.repository.SettlementQueryRepository;
 import org.zzin.splitfy.domain.settlement.repository.SettlementRepository;
 
@@ -39,7 +40,6 @@ public class SettlementService {
   private final SettlementRepository settlementRepository;
   private final SettlementQueryRepository settlementQueryRepository;
   private final AuthInnerService authInnerService;
-  private final SettlementHistoryMapper settlementHistoryMapper;
 
   public SettlementResponse createSettlement(AuthUser authUser, SettlementRequest request) {
     long issuerId = authUser.userId();
@@ -146,25 +146,11 @@ public class SettlementService {
     List<PaymentAllocationDto> dtos = settlementQueryRepository
         .findPaymentAllocationsInSettlements(settlementIds);
 
-    // 4. DTO에서 데이터 추출 및 그룹화
-    Map<Long, Payment> paymentMap = new HashMap<>();
-    Map<Long, List<Long>> allocationUserIdsByPayment = new HashMap<>();
+    // 4. User ID 수집
     Set<Long> userIds = new HashSet<>();
-
     for (PaymentAllocationDto dto : dtos) {
-      // Payment 객체 생성 (중복 제거)
-      paymentMap.computeIfAbsent(dto.paymentId(), id -> {
-        Payment p = new Payment(dto.paidAmount(), dto.payerId(), dto.shareAmount(), dto.title());
-        p.setSettlementId(dto.settlementId());
-        userIds.add(dto.payerId());
-        return p;
-      });
-
-      // Allocation User ID 수집
+      userIds.add(dto.payerId());
       if (dto.allocationUserId() != null) {
-        allocationUserIdsByPayment.computeIfAbsent(dto.paymentId(),
-                k -> new java.util.ArrayList<>())
-            .add(dto.allocationUserId());
         userIds.add(dto.allocationUserId());
       }
     }
@@ -172,28 +158,47 @@ public class SettlementService {
     // 5. User 정보 조회
     Map<Long, String> userNameMap = authInnerService.findByIdIn(userIds);
 
-    // 6. paymentId별로 allocationNames를 그룹화
-    Map<Long, List<String>> allocationNameMap = allocationUserIdsByPayment.entrySet().stream()
-        .collect(Collectors.toMap(
+    // 6. paymentId로 그룹화하여 SettlementPaymentResponse 생성 후 settlementId로 재그룹화
+    Map<Long, List<SettlementPaymentResponse>> paymentsBySettlement = dtos.stream()
+        .collect(Collectors.groupingBy(PaymentAllocationDto::paymentId))
+        .values().stream()
+        .map(group -> {
+          PaymentAllocationDto first = group.get(0);
+          List<String> allocationNames = group.stream()
+              .map(PaymentAllocationDto::allocationUserId)
+              .filter(Objects::nonNull)
+              .map(uid -> userNameMap.getOrDefault(uid, "알 수 없는 사용자"))
+              .distinct()
+              .sorted()
+              .toList();
+
+          return new AbstractMap.SimpleEntry<>(
+              first.settlementId(),
+              new SettlementPaymentResponse(
+                  first.title(),
+                  first.paidAmount(),
+                  userNameMap.get(first.payerId()),
+                  allocationNames
+              )
+          );
+        })
+        .collect(Collectors.groupingBy(
             Map.Entry::getKey,
-            e -> e.getValue().stream()
-                .map(uid -> userNameMap.getOrDefault(uid, "알 수 없는 사용자"))
-                .distinct()
-                .sorted()
-                .toList()
+            Collectors.mapping(Map.Entry::getValue, Collectors.toList())
         ));
 
-    // 7. settlementId별로 Payment들을 그룹화
-    Map<Long, List<Payment>> paymentsBySettlementId = paymentMap.values().stream()
-        .collect(Collectors.groupingBy(Payment::getSettlementId));
-
-    // 8. Settlement -> SettlementHistoryResponse 변환
-    List<SettlementHistoryResponse> responses = settlements.stream().map(settlement -> {
-      List<Payment> settlementPayments = paymentsBySettlementId.getOrDefault(settlement.getId(),
-          List.of());
-      return settlementHistoryMapper.toResponse(settlement, settlementPayments, userNameMap,
-          allocationNameMap);
-    }).toList();
+    // 7. Settlement -> SettlementHistoryResponse 변환
+    List<SettlementHistoryResponse> responses = settlements.stream()
+        .map(settlement -> new SettlementHistoryResponse(
+            settlement.getId(),
+            settlement.getTotalAmount(),
+            settlement.getStatus(),
+            settlement.getIssuedAt(),
+            settlement.getSucceededAt(),
+            settlement.getRemainder(),
+            paymentsBySettlement.getOrDefault(settlement.getId(), List.of())
+        ))
+        .toList();
 
     return new CommonPage<>(responses, settlementPage.getTotalPages());
   }
